@@ -1,3 +1,7 @@
+Fri Feb 22 02:44:23 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/calc.c, src/mpwrap.c: avoid warning
+
 Fri Feb 22 02:41:35 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/*.[ch]: update copyright string as appropriate
